# RPForest

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  install.sh  makeGif.sh
src/: CMakeLists.txt  README.md  main.cpp
src/engine/: Actor.cpp  Actor.h  Assets.cpp  Assets.h  Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  CameraConfig.h  Color.cpp  Color.h  ConfigParser.cpp  ConfigParser.h  DebugActor.cpp  DebugActor.h  FileShader.cpp  FileShader.h  Globals.cpp  Globals.h  Input.cpp  Input.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Polygon.cpp  Polygon.h  Program3D.cpp  Program3D.fs  Program3D.h  Program3D.vs  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderCodes.cpp  (+13 more)
src/engine/materials/: BarkMaterial.cpp  BarkMaterial.h  ClassicMaterial.cpp  ClassicMaterial.h  GroundMaterial.cpp  GroundMaterial.h  LeafMaterial.cpp  LeafMaterial.h  Material.cpp  Material.h  Materials.cpp  Materials.h  PlantMaterial.cpp  PlantMaterial.h  TerrainMaterial.cpp  TerrainMaterial.h
src/generating/: DiamondSquareTerrain.cpp  DiamondSquareTerrain.h  Shapes.cpp  Shapes.h  Spawner.cpp  Spawner.h  SpawnerActor.cpp  SpawnerActor.h
src/generating/configs/: FamilyConfig.h  HondaConfig.h  MaterialConfig.h  SkyConfig.h  SpawnerConfig.h  TerrainConfig.h
src/generating/lsystems/: CenterLeft.h  EndBranch.h  EndPolygon.h  ForwardConeDraw.h  ForwardDraw.h  ForwardMove.h  Generator.cpp  Generator.h  GeneratorConfig.h  GeneratorConfigCaster.h  LSysConfig.cpp  LSysConfig.h  LSysGenerator.cpp  LSysGenerator.h  Leaf.cpp  Leaf.h  Pitch.h  ProcessContext.h  Roll.h  SaveVertex.h  SetRadius.h  SetWidth.h  StartBranch.h  StartPolygon.h  StrSymbol.cpp  StrSymbol.h  Symbol.h  Symbols.h  Turn.h  Turtle.cpp  Turtle.h
src/rendering/: AccStruct.cpp  AccStruct.h  Config.cpp  Config.h  DebugConfig.h  EmbreeWrapper.cpp  EmbreeWrapper.h  KDTree.cpp  KDTree.h  LightSampler.cpp  LightSampler.h  PathTracer.cpp  PathTracer.h  PathTracerConfig.h  PhotoSaver.cpp  PhotoSaver.h  RayTracer.cpp  RayTracer.h  SAH.cpp  SAH.h  SimpleAccStruct.cpp  SimpleAccStruct.h  SkyLightHelper.cpp  SkyLightHelper.h  SkyLightSampler.cpp  SkyLightSampler.h  TriangleLightSampler.cpp  TriangleLightSampler.h  ViewModeConfig.h  bitmap_image.cpp
src/rendering/ASky/: AAtmConstants.C  ABase.H  AColorXYZV.C  (+15 more)
src/utils/: Ptr.h  Random.cpp  Random.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h
(+88 files in other folders)
